Update landing page with links

--- a/docs/nldl-2020.md
+++ b/docs/nldl-2020.md
@@ -4,6 +4,16 @@ title: Towards detection and classification of microscopic foraminifera using tr
 
 # Towards detection and classification of microscopic foraminifera using transfer learning
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam molestie interdum est vitae tempor. Aenean gravida varius neque id molestie. Vestibulum eu ligula blandit, maximus dui sit amet, rhoncus dolor. Nulla placerat mi sit amet ex vulputate, sed porta odio consectetur. Sed nec tincidunt felis. Integer eleifend velit et neque vestibulum, in sodales nibh malesuada. Fusce in tincidunt ligula. Etiam pellentesque ipsum elit, non luctus metus faucibus euismod. Aliquam ac suscipit sem. Aenean nec mollis metus, non rhoncus erat.
+## Paper
 
-Nunc ut enim eleifend, efficitur nisl et, elementum ligula. Quisque malesuada ut quam sed fermentum. Aenean lobortis, dolor a lacinia tristique, arcu justo laoreet urna, vitae fringilla odio eros sit amet augue. Quisque in facilisis augue. In hac habitasse platea dictumst. Nulla augue dolor, sollicitudin vel vulputate non, faucibus laoreet lacus. Donec quis hendrerit nisi. Integer venenatis metus felis, sed ultricies metus hendrerit ac. Suspendisse nec scelerisque ligula. Donec elementum erat enim, eu maximus est facilisis at. Aliquam nulla neque, suscipit eu facilisis in, fermentum nec nibh. Etiam rutrum ante sit amet ipsum rutrum, quis venenatis felis lobortis. Integer auctor nisi eget consequat scelerisque.
+The preprint of the 6-page manuscript to be be published in the proceedings of Northern Lights Deep Learning Workshop 2020 can be found at
+https://arxiv.org/abs/2001.04782
+
+
+## Dataset
+
+A temporary version of the microscopic foraminifera dataset can be downloaded from
+https://uitno.box.com/s/z6g5mmp12iev2uqjsit9idlqy7h2gvnf
+
+Pending approval for publication, a permanent copy of the microscopic foramninifera dataset will be available via
+https://doi.org/10.18710/GVTAQA.
