Ensure the links are actual anchors

--- a/docs/nldl-2020.md
+++ b/docs/nldl-2020.md
@@ -7,13 +7,12 @@ title: Towards detection and classification of microscopic foraminifera using tr
 ## Paper
 
 The preprint of the 6-page manuscript to be be published in the proceedings of Northern Lights Deep Learning Workshop 2020 can be found at
-https://arxiv.org/abs/2001.04782
+[https://arxiv.org/abs/2001.04782](https://arxiv.org/abs/2001.04782)
 
 
 ## Dataset
 
 A temporary version of the microscopic foraminifera dataset can be downloaded from
-https://uitno.box.com/s/z6g5mmp12iev2uqjsit9idlqy7h2gvnf
+[https://uitno.box.com/s/z6g5mmp12iev2uqjsit9idlqy7h2gvnf](https://uitno.box.com/s/z6g5mmp12iev2uqjsit9idlqy7h2gvnf)
 
-Pending approval for publication, a permanent copy of the microscopic foramninifera dataset will be available via
-https://doi.org/10.18710/GVTAQA.
+Pending approval for publication, a permanent copy of the dataset will be available via [doi:10.18710/GVTAQA](https://doi.org/10.18710/GVTAQA).
